Fixes #343 (Generic Filter editor layout problem (at least in Peyto scheme))

--- a/modules/web-war/css/VAADIN/themes/peyto/table/table.css
+++ b/modules/web-war/css/VAADIN/themes/peyto/table/table.css
@@ -1,6 +1,5 @@
 .v-table {
-	overflow: hidden;
-	text-align: left /* Force default alignment */
+	text-align: left;
 }
 
 .v-table.table-inline .v-table-header-wrap {
